generators/itshypnotic/hypnotic_log.log
2023-11-11 14:30:05,149 ERROR: hypnotic_prompt.py failed.
2023-11-11 14:30:05,149 ERROR: Error:   File "D:\sentiMation\generators\itshypnotic\hypnotic_prompt.py", line 6
    logging.basicConfig(filename='hypnotic_log.log', level=logging.INFO, format=''%(asctime)s %(levelname)s: %(message)s'')
                                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

2023-11-11 14:32:37,544 ERROR: hypnotic_prompt.py failed.
2023-11-11 14:32:37,544 ERROR: Error:   File "D:\sentiMation\generators\itshypnotic\hypnotic_prompt.py", line 6
    logging.basicConfig(filename='hypnotic_log.log', level=logging.INFO, format=''%(asctime)s %(levelname)s: %(message)s'')
                                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

2023-11-12 14:34:44,616 - INFO - Chosen prompt: Abstract hallucinatory art in the style of James R. Eads, fluid and morphing, vibrant, 8k, high dynamic range
        0: (rose:1.3), (expanding:1.5)
        30: (azure:1.3), (contracting:1.5)
        60: (chartreuse:1.3), (swirling:1.5)
        90: (sienna:1.3), (flowing:1.5)
        120:(lavender:1.3), (expanding:1.5)
2023-11-12 14:34:44,616 INFO: hypnotic_prompt.py finished successfully.
2023-11-12 14:34:44,616 INFO: Output: 
2023-11-12 14:34:44,835 INFO: Chosen prompt: Abstract hallucinatory art in the style of James R. Eads, fluid and morphing, vibrant, 8k, high dynamic range
        0: (rose:1.3), (expanding:1.5)
        30: (azure:1.3), (contracting:1.5)
        60: (chartreuse:1.3), (swirling:1.5)
        90: (sienna:1.3), (flowing:1.5)
        120:(lavender:1.3), (expanding:1.5)
2023-11-12 14:40:38,438 INFO: API call successful. Status Code: 200
2023-11-12 14:40:38,638 INFO: hypnotic_generator.py finished successfully.
2023-11-12 14:40:38,638 INFO: Output: 
